nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod-with-label
  labels:
    app: myapp
    env: dev
spec:
  containers:
    - name: mycontainer
      image: nginx
      ports:
        - containerPort: 80
