ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /a
            pathType: Prefix
            backend:
              service:
                name: app-a-service
                port:
                  number: 80
          - path: /b
            pathType: Prefix
            backend:
              service:
                name: app-b-service
                port:
                  number: 80
